--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "zod": "^3.22.4"
   }
 }
